--- a/public/main.html
+++ b/public/main.html
@@ -7,7 +7,7 @@
 	<title>Listings</title>
     <meta name="description" content="Show Listings of mock data">
     <meta name="author" content="Ayushi Sharma">
-    <link rel="icon" href="/icons/gift1.png" type="image/x-icon">
+    <link rel="icon" href="/icons/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link rel="stylesheet" type="text/css" href="/resources/bootstrap-3.3.7/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/resources/font-awesome-4.6.3/css/font-awesome.min.css">
@@ -27,7 +27,7 @@
     <div id="main">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4 col-sm-4 col-lg-4">
+                <div class="col-lg-4">
                     <div class="btn-group">
                         <div class="btn-group">
                             <button type="button" class="btn btn-danger" ui-sref="list" ng-click='showList()'> SHOW LIST ALL </button>
